# binary_type_inference

./: .gitmodules  Cargo.toml  README.md  bench.sh  build.rs  default.nix  exp  first  flake.nix  justfile  log  metadata  out.json  output  protolint.yml  result  second  t.dot  t.json  test_artifact.sh
.github/workflows/: ci.yml
benches/: preanalysis_benchmarks.rs
data_formats/: constraints.proto  ctypes.proto
expected_output/: complete_mooosl_expected.json  delete_scc_check.json  list_test_expected_simplified.json  mooosl_scc_cons.json  mooosl_simple_return_inference.json  new_moosl_scc_cons.json
expected_output/polymorphism_tests/: unification_expected_sccs.json
lowering/: type_inference.dl
retypd_wrapper/: Pipfile  buggy  simpler_bug  simpler_bug_interesting  simplified
retypd_wrapper/src/: main.py
sketch_test_files/: lattice.json  sub_0015c310_basic_cons_repro_file
src/: constraints.rs  lib.rs  test_utils.rs  util.rs
src/analysis/: callgraph.rs  fixup_returns.rs  mod.rs  pointer_analysis.rs  reaching_definitions.rs  stack_depth_analysis.rs
src/constraint_generation/: mod.rs
src/evaluation/: mod.rs
src/graph_algos/: mapping_graph.rs  mod.rs
src/inference_job/: mod.rs
src/lowering/: mod.rs
src/node_context/: mod.rs  (+3 more)
test_data/: big_list_test.c  cwe_560_aarch64_gcc.out  cwe_560_aarch64_gcc_ir.json  ds_test  ds_test.c  ds_test.json  full_mooosl_tid_list.json  key_hash_tid.json  list_additional_constraints  list_additional_constraints.pb  list_interesting_tids.pb  list_test.c  list_test.json  list_test_additional_constraints.json  list_test_interesting_tids.json  list_test_lattice.json  list_test_mvp.c  mooosl.json  mooosl_additional_constraints.json  mooosl_store_tid_filter.json  mooosl_test_interesting_tids.json  mooosl_test_lattice.json  mooosl_tid_filter.json  new_moosl.json  new_moosl_lattice.json  new_moosl_test_interesting_tids.json  pointer_test.c  pointer_test.json  pointer_test_additional_constraints  service.c
(+33 files in other folders)
