[package]
name = "binary_type_inference"
version = "0.1.0"
edition = "2018"

[lib]


[[bin]]
name = "json_to_constraints"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cwe_checker_lib = { git = "ssh://git@github.com/trailofbits/cwe_checker.git" }
cwe_checker_lib = { path = "./cwe_checker/src/cwe_checker_lib" }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
bytes = "1.1.0"
anyhow = "1.0"                                                   # for easy error types
log = "0.4.14"
petgraph = "0.5.1"
clap = "~2.33"
env_logger = "0.9.0"
backtrace = "0.3.63"
alga = "0.9.3"
num-traits = "0.2.14"
alga_derive = "0.9.2"
regex = "1.5.4"
nom = "7.1.0"
indexmap = { version = "1.6.2" }
itertools = "0.10.3"
csv = "1.1.6"
prost = "0.9.0"
tempdir = "0.3.7"

[build-dependencies]
prost-build = "0.9.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
